--- a/frontend/app.scripts.json
+++ b/frontend/app.scripts.json
@@ -15,7 +15,8 @@
       "ng-sanitize",
       "ng-file-upload",
       "AngularJS-Toaster",
-      "angular-trix"
+      "angular-trix",
+      "trix"
 
     ]
   },
@@ -34,6 +35,7 @@
        "ng-sanitize": "bower_components/angular-sanitize/angular-sanitize.min.js",
        "ng-file-upload": "bower_components/ng-file-upload/ng-file-upload.min.js",
        "AngularJS-Toaster": "bower_components/AngularJS-Toaster/toaster.min.js",
-       "angular-trix": "bower_components/angular-trix/dist/angular-trix.min.js"
+       "angular-trix": "bower_components/angular-trix/dist/angular-trix.min.js",
+       "trix": "bower_components/trix/dist/trix.js"
      }
 }
