--- a/frontend/app.scripts.json
+++ b/frontend/app.scripts.json
@@ -16,7 +16,9 @@
       "ng-file-upload",
       "AngularJS-Toaster",
       "angular-trix",
-      "trix"
+      "trix",
+      "angular-material-datetimepicker",
+      "moment"
 
     ]
   },
@@ -36,6 +38,8 @@
        "ng-file-upload": "bower_components/ng-file-upload/ng-file-upload.min.js",
        "AngularJS-Toaster": "bower_components/AngularJS-Toaster/toaster.min.js",
        "angular-trix": "bower_components/angular-trix/dist/angular-trix.min.js",
-       "trix": "bower_components/trix/dist/trix.js"
+       "trix": "bower_components/trix/dist/trix.js",
+       "angular-material-datetimepicker": "bower_components/angular-material-datetimepicker/dist/angular-material-datetimepicker.min.js",
+       "moment": "bower_components/moment/moment.js"
      }
 }
